--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons8-online-payment-64.svg" />
+    <link rel="icon" type="image/svg+xml" href="/doctor1.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Doctor Asst.</title>
   </head>
